--- a/src/data/projectsData.json
+++ b/src/data/projectsData.json
@@ -20,10 +20,10 @@
   {
     "id": 3,
     "title": "DailyNote",
-    "description": "A full-stack note-taking application that helps users jot down their thoughts and tasks effortlessly. Constructed with Node.js and Express for the backend, utilizing MongoDB for data persistence.",
+    "description": "A full-stack note-taking application that helps users jot down their thoughts and tasks effortlessly. Constructed with Next.js and TypeScript for the language, utilizing MongoDB for data persistence.",
     "image": "/assets/images/DailyNote.png",
-    "gitUrl": "https://github.com/surluna/daily-note-client",
-    "previewUrl": "https://my-daily-note.vercel.app/",
+    "gitUrl": "https://github.com/surluna/daily-note-react",
+    "previewUrl": "https://vv-notes-c7a04181585e.herokuapp.com/",
     "isPrivate": false
   }
 ]
